# artixinstall

./: LICENSE  README.md  pyproject.toml
artixinstall/: __init__.py  __main__.py  upload.bat
artixinstall/data/: locales.txt  nvidia.conf  pipewire_hyprland.conf  services.json
artixinstall/installer/: base.py  bootloader.py  desktop.py  disk.py  hardware.py  init.py  locale.py  packages.py  prereqs.py  users.py
artixinstall/tui/: menu.py  prompts.py  screen.py
artixinstall/utils/: log.py  shell.py
