[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artixinstall"
version = "1.0.1"
description = "An interactive TUI installer for Artix Linux with support for OpenRC, runit, s6, and dinit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Artix Install Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
]

[project.scripts]
artixinstall = "artixinstall.__main__:main"

[project.urls]
Homepage = "https://github.com/1ypi/artixinstall"
Repository = "https://github.com/1ypi/artixinstall"
Issues = "https://github.com/1ypi/artixinstall/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*.__pycache__", "*.__pycache__.*", "__pycache__", "__pycache__.*"]
